--- a/styles/module/m-introduciton.scss
+++ b/styles/module/m-introduciton.scss
@@ -27,7 +27,7 @@
   background-size: cover;
 }
 .m-birth {
-  background: url(#{base(images-url)}birth.jpg) center center no-repeat;
+  background: url(#{base(images-url)}birth.png) center center no-repeat;
   background-size: cover;
 }
 .m-horoscope {
