--- a/styles/about.css
+++ b/styles/about.css
@@ -263,7 +263,7 @@ article, section {
   background-size: cover; }
 
 .m-birth {
-  background: url(../images/birth.jpg) center center no-repeat;
+  background: url(../images/birth.png) center center no-repeat;
   background-size: cover; }
 
 .m-horoscope {
