修改二维码图片

--- a/styles/about.css
+++ b/styles/about.css
@@ -584,7 +584,7 @@ article, section {
   text-decoration: none; }
 
 .m-contact {
-  background: url(../images/qrcode.png) center center no-repeat;
+  background: url(../images/qrcode.jpg) center center no-repeat;
   background-size: cover; }
 
 /**
