--- a/styles/module/m-contact.scss
+++ b/styles/module/m-contact.scss
@@ -1,4 +1,4 @@
 .m-contact{
-  background: url(#{base(images-url)}qrcode.png) center center no-repeat;
+  background: url(#{base(images-url)}qrcode.jpg) center center no-repeat;
   background-size: cover;
 }
